feat: user dashboard with owned campaigns and organized events
Adds GET /users/{id}/campaigns and GET /users/{id}/events endpoints so
the dashboard can show a user's own content without a full table scan
on the client side.

Backend:
- CampaignDao.findByUserId() — scan + client-side filter (GSI TODO at scale)
- FundraisingEventDao.findByOrganizerId() — same pattern
- CampaignService.getCampaignsByUser(), FundraisingEventService.getEventsByOrganizer()
- UserController: two new GET sub-resource endpoints; injects CampaignService + EventService

Frontend:
- userApi: getUserCampaigns(), getUserEvents()
- DashboardPage: replaces placeholder cards with live My Campaigns and My Events
  lists; each item links to the campaign detail page; formatting matches app style

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>